# nic

./: .gitignore  LICENSE  README.md  package-lock.json
nic/: Cargo.toml  nic.toml  rustfmt.toml
nic/migrations/: 20241124203312_init_nic.down.sql  20241124203312_init_nic.up.sql
nic/src/: api.rs  error.rs  lib.rs  main.rs  time.rs  utils.rs
nic/src/config/: mod.rs  run_options.rs
nic/src/db/: mock.rs  mod.rs
nic/src/sensors/: interface.rs
nic/src/test/utils/: mock_cfg.rs  mock_db.rs  mock_sensors.rs  mock_time.rs  mod.rs
nic/src/tests/: mock_sensors.rs  mod.rs  signal_handling.rs  switch_signals.rs  test_mode_switch.rs  watering.rs
nic/src/tests/api/: switch_auto.rs
nic/src/watering/: api.rs  ds.rs  interface.rs  mod.rs  mode.rs  mode_auto.rs  mode_manual.rs  mode_wizard.rs  modes.rs  schedule.rs  state_machine.rs  water_state.rs  water_window.rs  watering_alg.rs  watering_system.rs
nic/src/weather/: api.rs  mod.rs  mqtt_mon.rs
nic/test-utilities/: Cargo.toml
nic/test-utilities/src/common/: mock_db.rs  mock_sector.rs  mock_sensors.rs  mod.rs
nic/tests/: api_switch_auto.rs  mode_switch.rs  mode_wizard.rs  signal_handling.rs  state_machine.rs  switch_signals.rs  test_mode_switch.rs  watering.rs
nic/tests/api/: mod.rs  switch_auto.rs
nic/tests/common/: mock_db.rs  mock_sensors.rs  mod.rs
nic_pwa/: package-lock.json  package.json
nic_pwa/src/: App.css  App.js
nic_pwa_preact/: README.md  package-lock.json  package.json  preact.config.js  size-plugin.json
nic_pwa_svelte/: package-lock.json  package.json  svelte.config.js  workbox-config.js
nic_pwa_vue/: .eslintrc.js  README.md  package-lock.json  package.json  vite.config.js  vue.config.js
(+51 files in other folders)
