[package]
name = "nic"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
axum = { version = "0.7.9", features = ["macros", "tokio", "ws"] }
axum-server = "0.7.1"
chrono = "0.4"
futures-util = "0.3"

getopts = "0.2"

mockall = "0.13.1"
num-traits = "0.2.19"
num-derive = "0.4.2"
reqwest = { version = "0.12.9", features = ["blocking", "json"] }
rumqttc = "0.24.0"
rusqlite = "0.32.1"
serde_json = "1.0.133"
serde = { version = "1.0.216", features = ["derive"] }

thiserror = "2.0.7"
tokio = { version = "1.42.0", features = ["full"] }
tokio-tungstenite = "0.25.0"
# tower-http = { version = "0.6.2", features = ["cors"] }

toml = "0.8.19"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[dev-dependencies]
tower = "0.5.2"
hyper = { version = "1.5.2", features = ["full"] }

# test-utilities = { path = "test-utilities" }

[profile.release]
lto = true

[lib]
name = "nic"
path = "src/lib.rs"
crate-type = ["rlib"]
